# TUM-AdvRoboCup

./: .gitignore  .gitmodules  GUGU-TODO.md  README.md  Readmefor_test.md  Runcong_doc.md  Xuhao_Doc.md  Yueyang_Doc.md  sub_tasks.json
.devcontainer/: Dockerfile  devcontainer.json
hsrb_ws/src/: .rosinstall.bak
hsrb_ws/src/depth_segmentation/: CMakeLists.txt  package.xml
hsrb_ws/src/depth_segmentation/scripts/: centroid_calculator.py  depth_seg.py
hsrb_ws/src/env_detection/: CMakeLists.txt  package.xml
hsrb_ws/src/env_detection/config/: loc_to_obj.json  obj_to_loc.json
hsrb_ws/src/env_detection/scripts/: env_detection.py
hsrb_ws/src/env_detection/srv/: DetectionService.srv
hsrb_ws/src/gspeech/: CMakeLists.txt  README.md
hsrb_ws/src/gspeech/src/: gspeech.py  gspeech_new.py
hsrb_ws/src/gtts_tts/: CMakeLists.txt  package.xml  readme.md
hsrb_ws/src/gtts_tts/action/: TalkRequest.action
hsrb_ws/src/gtts_tts/launch/: gtts_tts.launch
hsrb_ws/src/gtts_tts/scripts/: gtts_tts_launch.py  gtts_tts_node.py  gtts_tts_rosrun.py  try_subprocess.py
hsrb_ws/src/hand_detection/scripts/hand_detection/: hand_detection_node.py
hsrb_ws/src/hsrb_navigation/: CMakeLists.txt  package.xml  readme  readme.md
hsrb_ws/src/hsrb_navigation/config/: goals.yaml  goals_1008.yaml  move_base.yaml
hsrb_ws/src/hsrb_navigation/launch/: amcl.launch  hsrb_nav_ics.launch  laser_scan_matcher.launch  mapping.launch  mapping_with_rviz.launch  navigation.launch  navigation_test.launch  send_goal.launch  slam_gmapping.launch
hsrb_ws/src/hsrb_navigation/map/: map.pgm
hsrb_ws/src/hsrb_navigation/rviz/: mapping.rviz
hsrb_ws/src/hsrb_navigation/script/: send_goal_action_yaml.py  send_goal_action_yaml_to_room.py  send_goal_action_yaml_to_room_mod.py  send_goal_message_yaml.py
hsrb_ws/src/hsrb_navigation/src/: map_monitor.py  move_in_square copy.py  move_in_square.py  navigation_node.py
hsrb_ws/src/object_detection/: package.xml
hsrb_ws/src/object_detection/launch/: detection.launch
hsrb_ws/src/pick_place/: CMakeLists.txt  package.xml
hsrb_ws/src/pick_place/action/: Place.action
hsrb_ws/src/pick_place/include/pick_place/: pick.h  place.h
hsrb_ws/src/pick_place/launch/: pick_place.launch
hsrb_ws/src/pick_place/rviz/: motion_plan.rviz
hsrb_ws/src/pick_place/src/: pick.cpp  place.cpp
hsrb_ws/src/pick_place/src/applications/: pick_node.cpp
hsrb_ws/src/pick_place/src/server/: pick_server.cpp
hsrb_ws/src/pick_place_action/: CMakeLists.txt  package.xml
hsrb_ws/src/pick_place_action/include/pick_place/: pick.h
hsrb_ws/src/pick_place_action/src/: pick.cpp
hsrb_ws/src/pose_detection/: CMakeLists.txt  package.xml
hsrb_ws/src/pose_detection/launch/: detection.launch
hsrb_ws/src/project_msgs/: CMakeLists.txt  package.xml  usage.md
hsrb_ws/src/project_msgs/action/: CalculateCentroid.action
hsrb_ws/src/project_msgs/msg/: CollisionGeometry.msg  LabeledCentroid.msg
hsrb_ws/src/sam_fp/: CMakeLists.txt  README.md  package.xml
hsrb_ws/src/sam_fp/include/pcd_processing/: pcd_processing.h
hsrb_ws/src/sam_fp/scripts/: samros.py  use_yolo.py
hsrb_ws/src/sam_fp/src/: calculate_centroid_client.cpp  pcd_processing.cpp  pcd_processing_action.cpp  pcd_processing_action_node.cpp
hsrb_ws/src/segmentation/sam_fp/include/pcd_processing/: pcd_processing.h
hsrb_ws/src/segmentation/sam_fp/scripts/: samros.py
hsrb_ws/src/segmentation/sam_fp/src/: pcd_processing.cpp
hsrb_ws/src/state_machine/: CMakeLists.txt  brainstorm.md  package.xml
hsrb_ws/src/state_machine/config/: config.yaml
hsrb_ws/src/state_machine/scripts/: state_machine.py  state_machine_backup.py  state_machine_dry_run.py  test ordering.py  test.py  test2.py  test3.py  test4.py  test5.py
hsrb_ws/src/task_planner/: CMakeLists.txt  package.xml  readme.md  sub_tasks.json
hsrb_ws/src/task_planner/launch/: load_subtasks_for_sm.launch  task_planner.launch
hsrb_ws/src/task_planner/scripts/: actions_and_adverbials.json  load_subtasks.py  load_subtasks_for_sm.py  load_subtasks_for_sm_node.py  sub_tasks.json  task_3_state_worked.py  task_graph.py  task_graph_3_staTE.py  task_graph_3_state_fixed.py  task_graph_add_all.py  task_graph_correct.py  task_graph_fix_seq.py  task_graph_logic_correct.py  task_graph_single_path.py  task_planner_combined.py  task_planner_node.py
hsrb_ws/src/wpr_chatgpt/: CMakeLists.txt
hsrb_ws/src/wpr_chatgpt/config/: api_key.yaml
hsrb_ws/src/wpr_chatgpt/launch/: gui.launch
hsrb_ws/src/wpr_chatgpt/scripts/: chat_config.py  gui_chatgpt.py  openai_ros.py
