<?xml version="1.0"?>
<package>
  <name>pick_place</name>
  <version>0.0.0</version>
  <description>The pick_place package</description>

  <maintainer email="yueyangzhang@todo.todo">yueyangzhang</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <test_depend>rosunit</test_depend>

  <build_depend>geometry_msgs</build_depend>  
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tmc_control_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>project_msgs</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>tmc_control_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
