<package format="2">
  <name>sam_fp</name>
  <version>0.0.0</version>
  <description>The sam_fp package</description>
  <maintainer email="user@todo.todo">TODO: Maintainer Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>project_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>masks_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>project_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>masks_msgs</exec_depend> 
  <exec_depend>tf</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
